Endpoint for retrieving common exercises
